--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ ktor_version=2.3.1
 kotlin_version=1.8.22
 logback_version=1.2.11
 kotlin.code.style=official
+kotest_version=5.6.0
+mockk_version=1.13.5
