:bricks: infra: serverless frameworkを利用してLambdaとAPIGatewayを作成
BREAKING CHANGE: ktor止めてほぼ作り直したのですごい変わっています！

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,17 @@
+*.class
 .gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
+/build/
+/bin/
+/.settings/
 .project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+.classpath
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+# Package Files
+*.jar
+*.war
+*.ear
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Serverless directories
+.serverless
 
-### VS Code ###
-.vscode/
+!/gradle/wrapper/gradle-wrapper.jar
