--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,15 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: use Node.js 14.x
+        uses: actions/setup-node@v3
         with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: Test with Gradle
-        run: ./gradlew test
-      - name: Build with Gradle
-        run: ./gradlew build
+          node-version: 14.x
+      - name: install dependencies
+        run: npm install
+      # - name: test
+      #   run: npm test
       - name: serverless deploy
         uses: serverless/github-action@v3.2
         with:
