--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@middy/core": "^3.4.0",
-    "@middy/http-json-body-parser": "^3.4.0"
+    "@middy/http-json-body-parser": "^3.4.0",
+    "dotenv": "^16.3.1",
+    "openai": "^3.3.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
